--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "proxy": "http://localhost:3000"
 }
