--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-location": "^13.0.4",
     "expo-permissions": "^13.0.3",
     "expo-status-bar": "~1.1.0",
+    "faker": "^5.5.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.3.1",
