--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --port=8081",
+    "android": "expo start --android --port=8081",
+    "ios": "expo start --ios --port=8081",
     "web": "expo start --web",
     "eject": "expo eject"
   },
