changed API calls, integrated loading spinner for any api call, set current location dispatcher every 30 seconds

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "gps-monitor-mobile",
+    "name": "GPS Monitor",
     "slug": "gps-monitor-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
