--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-maps": "0.29.4",
+    "react-native-maps": "0.28.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.9.0",
+    "react-native-screens": "~3.8.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
