--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.3.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-gravatar": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "0.28.1",
     "react-native-reanimated": "~2.2.0",
