--- a/package.json
+++ b/package.json
@@ -25,17 +25,14 @@
     "jwt-decode": "^3.1.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.3.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-gravatar": "^1.0.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "0.28.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-svg": "^12.1.1",
-    "react-native-web": "0.17.1",
+    "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
@@ -44,6 +41,5 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true,
-  "proxy": "http://localhost:3000"
+  "private": true
 }
